code changes junit n all